--- a/Pratice/undersampling/Notebook/undersampling.ipynb
+++ b/Pratice/undersampling/Notebook/undersampling.ipynb
@@ -59,7 +59,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>9.903488</td>\n",
        "      <td>1</td>\n",
@@ -69,7 +69,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>11.695247</td>\n",
        "      <td>1</td>\n",
@@ -79,7 +79,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>11.407565</td>\n",
        "      <td>1</td>\n",
@@ -89,7 +89,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>4</td>\n",
        "      <td>10.819778</td>\n",
        "      <td>1</td>\n",
@@ -99,7 +99,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>5</td>\n",
        "      <td>10.819778</td>\n",
        "      <td>0</td>\n",
@@ -141,6 +141,37 @@
     "x_cols = [i for i in df.columns if i not in ('ID', 'default_next_month')]\n",
     "X = df[x_cols]\n",
     "y = df['default_next_month']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        1\n",
+       "1        1\n",
+       "2        0\n",
+       "3        0\n",
+       "4        0\n",
+       "        ..\n",
+       "29995    0\n",
+       "29996    0\n",
+       "29997    1\n",
+       "29998    1\n",
+       "29999    1\n",
+       "Name: default_next_month, Length: 30000, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
    ]
   },
   {
